# WorkTimeTracker

./: .env.example  .gitignore  ARCHIVE_GUIDE.md  BREAK_SYSTEM_ANALYSIS.md  BREAK_SYSTEM_CHECKLIST.md  BREAK_SYSTEM_QUICKSTART.md  BUGFIX_KICK_NOT_WORKING.md  BUGFIX_LOGIN.md  BUILD_WINDOWS.md  CLEANUP_REPORT.md  CREDENTIALS_STORAGE.md  FIX_PRIORITIES.md  FIX_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  GIT_COMMANDS.md  HOTFIX_cleanup.md  INSTALL.md  INSTALLATION_GUIDE.md  MIGRATION_INSTRUCTIONS.md  MONITOR_BOT_README.md  QUICKSTART_ARCHIVE.md  QUICKSTART_KEEPALIVE.md  QUICKSTART_MIGRATION.md  QUICK_BUILD_GUIDE.md  README.md  REPORTS_FUNCTIONALITY.md  SECURITY_ANALYSIS.md  SECURITY_SUMMARY.md  SETUP_COMPLETE.md  SLOT_MANAGEMENT_LOGIC.md  SUPABASE_KEEPALIVE_GUIDE.md  SUPABASE_MIGRATION_GUIDE.md  SUPABASE_QUICKSTART.md  TELEGRAM_NOTIFICATIONS.md  __init__.py  add_get_active_session.ps1  add_get_active_session.py  analyze_sheets.py  api_adapter.py  (+96 more)
admin_app/: MONITOR_USAGE.md  REALTIME_MONITOR_README.md  audit_logger.py  break_analytics_tab.py  break_manager.py  break_manager_supabase.py  break_monitor_service.py  break_schedule_dialog.py  main_admin.py  notifications_panel.py  realtime_monitor.py  repo.py  reports_tab.py  schedule_parser.py
dev-tools/: 11.py  analyze_duplicates.py  config_secure.py.reference  create_break_sheets.py  quick_patch.py
migrations/: 001_initial_schema.sql  002_add_audit_log.sql  003_optimize_indexes.sql  004_notifications_tables.sql  005_performance_optimization.sql  006_add_break_windows.sql  (+1 more)
shared/: data_cache.py  (+8 more)
(+72 files in other folders)
